--- a/app/src/main/res/layout/activity_create_item.xml
+++ b/app/src/main/res/layout/activity_create_item.xml
@@ -15,6 +15,12 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/edit_text_hint_item_name"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        app:counterOverflowTextAppearance="@style/counterOverride"
+        app:counterOverflowTextColor="@color/colorAccent"
+        app:counterTextAppearance="@style/counterText"
+        app:counterTextColor="@color/colorAccent"
         android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         app:endIconContentDescription="@string/edit_text_description_item_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +36,7 @@
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/lato"
             android:inputType="text"
+            android:maxLength="20"
             android:singleLine="true"
             android:textCursorDrawable="@drawable/shape_cursor_color"
             android:textSize="16sp" />
