--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/welcome_packstar"
+        android:contentDescription="@string/going_on_an_adventure_description"
         android:cropToPadding="true"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
