--- a/app/src/main/res/layout/recyclerview_list_bag_items.xml
+++ b/app/src/main/res/layout/recyclerview_list_bag_items.xml
@@ -24,7 +24,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
-            android:elevation="6dp"
+            app:elevation="4dp"
+            app:borderWidth="8dp"
             app:fabSize="auto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
