--- a/app/src/main/res/layout/recyclerview_list_bags.xml
+++ b/app/src/main/res/layout/recyclerview_list_bags.xml
@@ -19,6 +19,7 @@
         android:stackFromBottom="true">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fab_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,7 +27,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
-            android:elevation="6dp"
+            app:elevation="4dp"
+            app:borderWidth="8dp"
             app:fabSize="auto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
