--- a/app/src/main/res/layout/recyclerview_list_bag_items.xml
+++ b/app/src/main/res/layout/recyclerview_list_bag_items.xml
@@ -24,6 +24,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
+            android:layout_gravity="bottom|end"
             app:elevation="4dp"
             app:borderWidth="8dp"
             app:fabSize="auto"
@@ -40,6 +41,7 @@
             android:layout_margin="0dp"
             android:clipToPadding="false"
             android:padding="2dp"
+            app:elevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
